--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
+            "inlineStyleLanguage": "scss",
 
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": ["src/styles.css", "src/theme.scss"],
@@ -89,7 +90,7 @@
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.css","src/theme.scss"],
+            "styles": ["src/styles.css", "src/theme.scss"],
             "scripts": []
           }
         },
